# gworkspace-ai-agent

./: .coverage  .env.example  .gitignore  ARCHITECTURE.md  CODE_READING_GUIDE.md  COMPONENTS.md  README.md  google-workspace-langchain-agent-design.md  implementation_plan_1.md  pyproject.toml  requirements-dev.txt  requirements.txt
agent/: __init__.py  executor.py  planner.py  prompts.py  risk_evaluator.py  schemas.py
backend/: __init__.py  config.py  local_identity.py  main.py
backend/middleware/: auth.py  idempotency.py  logging_middleware.py  request_id.py
backend/routes/: agent.py  audit.py  auth.py  hitl.py  system.py  tools.py
backend/schemas/: __init__.py  action.py  common.py  envelope.py
backend/services/: agent_service.py  oauth_service.py  policy_service.py  token_store.py  tool_invoke_service.py
configs/: oauth_scopes.yaml  risk_policy.yaml  tool_manifest.json
docs/: 1. PRODUCT OVERVIEW.md  10. LANGCHAIN GOOGLE WORKSPACE CAPABILITIES.md  11. TOOL ACTION CATALOG.md  13. MCP TOOL MANIFEST.md  2. SYSTEM ARCHITECTURE.md  3.AUTH & SECURITY.md  4. AGENT DESIGN.md  5. HITL DESIGN (CORE INNOVATION).md  6.API SPEC.md  7.REPO STRUCTURE.md  8. TASK BREAKDOWN.md  9. PROMPT SPEC.md  API_REFERENCE.md  ARCHITECTURE.md  CONFIGURATION.md  gworkspace-ai-agent-architecture.drawio
hitl/: __init__.py  audit.py  policy_engine.py  queue.py  state_machine.py  workflow.py
scripts/: dev.sh  extract_manifest.py
tests/: conftest.py
tests/e2e/: test_e2e_calendar_event.py  test_e2e_sheet_to_email.py
tests/integration/: test_auth_flow.py  test_hitl_flow.py  test_tool_invoke_flow.py
tools/: __init__.py  base.py  registry.py
(+27 files in other folders)
